@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-14T08:22:49Z",
-  "count_outdated" : 273,
-  "uniques_outdated" : 162,
-  "count" : 277,
-  "uniques" : 165,
+  "timestamp" : "2022-06-15T01:41:52Z",
+  "count_outdated" : 275,
+  "uniques_outdated" : 164,
+  "count" : 279,
+  "uniques" : 167,
   "clones" : [
-    {
-      "timestamp": "2022-05-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-06-07T00:00:00Z",
       "count": 1,
@@ -23,6 +16,13 @@
       "timestamp": "2022-06-13T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
