@@ -3,11 +3,6 @@
   "uniques": 3,
   "clones": [
     {
-      "timestamp": "2022-05-31T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-06-07T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -15,6 +10,11 @@
     {
       "timestamp": "2022-06-13T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-14T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
